...
        android:layout_marginTop="-25dp"
        android:gravity="center"
        android:textSize="30dp"
        android:layout_marginRight="5dp"
        android:textStyle="bold"
        android:fontFamily="@font/dmsans"
        android:text="Sign Up" />
    <ImageView
        android:id="@+id/profpic"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="15dp"
        app:srcCompat="@drawable/profpic"
        android:clickable="true"
        android:onClick="addPicture"
...

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        style="@style/LoginTextInputLayoutStyle"
        app:boxBackgroundColor="#f9f9f9"
        android:id="@+id/name"
        android:theme="@style/LoginTextInputLayoutStyle"


        >

        <com.google.android.material.textfield.TextInputEditText
...
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:theme="@style/LoginTextInputLayoutStyle"
        style="@style/LoginTextInputLayoutStyle"
        app:boxBackgroundColor="#f9f9f9"
        android:id="@+id/uscid"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:fontFamily="@font/dmsans"
...
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:theme="@style/LoginTextInputLayoutStyle"
        style="@style/LoginTextInputLayoutStyle"
        app:boxBackgroundColor="#f9f9f9"
        android:id="@+id/affiliation"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:fontFamily="@font/dmsans"
...
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:theme="@style/LoginTextInputLayoutStyle"
        style="@style/LoginTextInputLayoutStyle"
        app:boxBackgroundColor="#f9f9f9"
        android:id="@+id/password"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:fontFamily="@font/dmsans"
            android:layout_gravity="center_horizontal"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/errorText"
        android:layout_marginTop="-5dp"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="#990000"
        android:textStyle="bold"
        android:fontFamily="@font/dmsans"
        android:visibility="invisible"
        android:text="Please correct the boxes/text highlighted in red to submit." />

    <Button
        android:id="@+id/buttonLogIn"
        style="@style/Button.Purple"
        android:layout_width="267dp"
        android:layout_height="48dp"
        android:backgroundTint="#8A00C2"
        android:text="Sign Up"
        android:textStyle="bold"
...
            android:layout_width="205dp"
            android:layout_height="100dp"
            app:srcCompat="@drawable/navbar1"
            android:onClick="toMapScreen"/>

        <ImageView
            android:id="@+id/nav2"
            android:layout_width="205dp"
            android:layout_height="100dp"
            app:srcCompat="@drawable/navbarprof2"
            android:onClick="toProfileScreen"/>
    </LinearLayout>

...
