...
        android:text="Log In"
        android:fontFamily="@font/dmsans"
        android:textStyle="bold"
        app:cornerRadius="10dp" />

    <Button
        android:id="@+id/buttonSignUp"
        style="@style/Button.Purple"
        android:layout_width="267dp"
        android:layout_height="48dp"
        android:onClick="toSignUpScreen"
        android:clickable="true"
        android:layout_marginTop="20dp"
...
